add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_own_library)

add_executable(tests tests.cpp)
add_executable(KleinsterTeilerAufg1_2 KleinsterTeilerAufg1_2.cpp)
add_executable(KleinsterTeilerAufg1_3Faster KleinsterTeilerAufg1_3Faster.cpp)
add_executable(fract fract.cpp)


# Kommentieren Sie die folgenden Zeilen fuer die Aufgabe `mile_to_kilometer` aus
#add_executable(mile_to_kilometer mile_to_kilometer.cpp)
